// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - BackEndRolePage renders correctly for /backend path 1`] = `
Array [
  <RoleBar
    label="Back End Developer"
  />,
  .c0 {
  position: relative;
  padding: 2rem;
}

<section
    className="c0"
  >
    <Robot
      mood="confused"
    />
    <QuoteBubble
      quote="Yesterday I was implementing PUT method for missing RESTful API endpoint."
    />
    <nav>
      <RoleActionButton
        to="/backend/brag"
        variant="brag"
      />
      <RoleActionButton
        to="/backend/confess"
        variant="confess"
      />
    </nav>
  </section>,
]
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/brag path 1`] = `
Array [
  <RoleBar
    label="Back End Developer"
  />,
  .c0 {
  position: relative;
  padding: 2rem;
}

<section
    className="c0"
  >
    <Robot
      mood="confident"
    />
    <QuoteBubble
      quote="Yesterday I was implementing PUT method for missing RESTful API endpoint."
    />
    <nav>
      <RoleActionButton
        to="/backend/brag"
        variant="brag"
      />
      <RoleActionButton
        to="/backend/confess"
        variant="confess"
      />
    </nav>
  </section>,
]
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/confess path 1`] = `
Array [
  <RoleBar
    label="Back End Developer"
  />,
  .c0 {
  position: relative;
  padding: 2rem;
}

<section
    className="c0"
  >
    <Robot
      mood="sad"
    />
    <QuoteBubble
      quote="Yesterday I was implementing PUT method for missing RESTful API endpoint."
    />
    <nav>
      <RoleActionButton
        to="/backend/brag"
        variant="brag"
      />
      <RoleActionButton
        to="/backend/confess"
        variant="confess"
      />
    </nav>
  </section>,
]
`;
